# fib

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING  Cargo.toml  README.md  build.sh  compiler.fib  hello_world.fib
cli/: Cargo.toml  README.md
cli/resources/: fiber.toml.template  main.fib.template
cli/src/: main.rs
docs/: README.md  arrays.md  builtins.md  casting.md  control-flow.md  control_flow.md  docs.md  enums.md  expressions.md  functions.md  generics.md  imports.md  language_philosophy.md  language_specification.md  literals.md  operators.md  plan.md  pointers-memory.md  structs.md  switch.md  types.md  variables.md
example/: main.fib
fibc/: Cargo.toml
fibc/src/: cli.rs  driver.rs  hir.rs  integration_tests.rs  lib.rs  main.rs
fibc/src/analysis/: generate_hir.rs  mod.rs  tests.rs
fibc/src/ast/: ast.rs  mod.rs
fibc/src/lexer/: lexer.rs  tests.rs
fibc/src/lexing/: lexer.rs  tests.rs
fibc/src/lowering/: llvm_lower.rs
fibc/src/parser/: parser.rs  test.rs
fibc/src/parsing/: test.rs
fibc/src/token/: builtin.rs  identifier.rs  keyword.rs  literal.rs  operator.rs  punctuation.rs  token.rs
fibc/src/tokens/: operator.rs  token.rs
fiber-lsp/: Cargo.toml
fiber-lsp/src/: backend.rs  definition.rs  diagnostics.rs  hover.rs  lookup.rs  main.rs
fiberc/: Cargo.toml  README.md  fib_out  fib_out.ll  fiber.toml  main.fib
lsp/: README.md
samples/: README.md  bitwise_ops.fib  enums.fib  fib_bench.fib  hello_world.fib  linked_list.fib  memory_pool.fib  minimal.fib  multiple_returns.fib  nested_assign.fib  sorting.fib  string_builtins.fib  (+2 more)
(+158 files in other folders)
