[package]
name = "cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "fiber"
path = "src/main.rs"

[dependencies]
tera = "1"
clap = { version = "4.5.60", features = ["derive"] }
fibc = { path = "../fibc" }
ureq = "2.5.0"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
