[package]
name = "fiber-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fiber-lsp"
path = "src/main.rs"

[dependencies]
fibc = { path = "../fibc", default-features = false }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
